--- a/package.json
+++ b/package.json
@@ -14,25 +14,13 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~52.0.0",
+    "expo-auth-session": "~6.0.3",
     "expo-status-bar": "~2.2.2",
     "firebase": "^11.9.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-toast-message": "2.1.5",
-    "expo-auth-session": "~6.0.3",
-    "expo-crypto": "~14.0.2",
-    "expo-linking": "~7.0.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "react-native-toast-message": "2.1.5"
   },
   "private": true
 }
