--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
-    "expo": "~52.0.0",
+    "expo": "^52.0.46",
+    "expo-asset": "~11.0.5",
     "expo-auth-session": "~6.0.3",
-    "expo-status-bar": "~2.2.2",
+    "expo-status-bar": "~2.0.1",
     "firebase": "^11.9.0",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.12.0",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
     "react-native-toast-message": "2.1.5"
+  },
+  "resolutions": {
+    "@react-native/gradle-plugin": "0.76.9"
   },
   "private": true
 }
