--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
       "package": "com.malith98.beanpulze",
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000"
       }
     },
     "web": {
