--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^11.9.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
