--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
-    "react-native-toast-message": "2.1.5"
+    "react-native-toast-message": "2.1.5",
+    "expo-image-picker": "~16.0.6"
   },
   "resolutions": {
     "@react-native/gradle-plugin": "0.76.9"
