--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.46",
     "expo-asset": "~11.0.5",
     "expo-auth-session": "~6.0.3",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.9.0",
     "react": "18.3.1",
@@ -25,8 +27,7 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
-    "react-native-toast-message": "2.1.5",
-    "expo-image-picker": "~16.0.6"
+    "react-native-toast-message": "2.1.5"
   },
   "resolutions": {
     "@react-native/gradle-plugin": "0.76.9"
