--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
+    "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "expo": "^52.0.46",
     "expo-asset": "~11.0.5",
@@ -27,7 +28,8 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
-    "react-native-toast-message": "2.1.5"
+    "react-native-toast-message": "2.1.5",
+    "react-redux": "^9.2.0"
   },
   "resolutions": {
     "@react-native/gradle-plugin": "0.76.9"
