--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^52.0.46",
     "expo-asset": "~11.0.5",
     "expo-auth-session": "~6.0.3",
+    "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.9.0",
@@ -34,5 +35,8 @@
   "resolutions": {
     "@react-native/gradle-plugin": "0.76.9"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "react-native-dotenv": "^3.4.11"
+  }
 }
